@@ -15,11 +15,12 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralApplication
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_CREATED_BY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_LIST;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_PRE_STATE;
 
 @Slf4j
 @Service
@@ -58,10 +59,12 @@ public class RejectGeneralApplicationAboutToSubmitHandler
             final String valueCode = dynamicList.getValueCode();
             log.info("selected dynamic list code : {}", valueCode);
             final List<GeneralApplicationCollectionData> applicationCollectionDataList
-                = existingList.stream().filter(ga -> !ga.getId().equals(valueCode)).sorted(helper::getCompareTo).collect(Collectors.toList());
+                = existingList.stream().filter(ga -> !ga.getId().equals(valueCode)).sorted(helper::getCompareTo).toList();
             log.info("applicationCollectionDataList : {}", applicationCollectionDataList.size());
             caseData.put(GENERAL_APPLICATION_COLLECTION, applicationCollectionDataList);
         }
-        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
+        String previousState = Objects.toString(caseDetails.getData().get(GENERAL_APPLICATION_PRE_STATE), caseDetails.getState());
+        log.info("Previous state : {} for caseId {}", previousState, caseDetails.getId());
+        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).state(previousState).build();
     }
 }
